[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "py_extrema"
version = "0.0.3b"
authors = [{name = "Corentin Cadiou", email = "contact@cphyc.me"}]
description = "Find extrema and their mergers in N dimensional fields."
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
urls = {Homepage = "https://github.com/cphyc/py_extrema"}
requires-python = ">=3.7.0"
dependencies = [
    "numpy>=1.20",
    "numba",
    "unyt",
    "scipy",
    "pandas",
    "pyfftw",
    "tqdm",
    "numexpr",
]
optional-dependencies = {}

[project.readme]
text = "Find extrema and their mergers in N dimensional fields."
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests"] # *.tests; *.tests.*; tests.*
namespaces = false

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "C", "F", "UP", "B", "A", "YTT", "S", "N"]
ignore = ["N802", "N806", "C901", "UP007", "N803"]
target-version = 'py38'

[tool.ruff.per-file-ignores]
"**/test*.py" = ["S101"]

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["labellines"]
known-third-party = [
  "numpy",
  "matplotlib",
]
